<resources>
    <string name="app_name">Gutenberg books</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_reading">Start Reading</string>
    <string name="bookshelves">bookshelves</string>
    <string name="subjects">Subjects</string>
    <string name="authors">Authors</string>
    <string name="title">Title</string>
    <string name="book_info">Book Info</string>
</resources>